// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField should be tolerant of an undefined value prop 1`] = `
<div
  className="control-group"
>
  <select
    className=""
    name="someInput"
    onChange={[Function]}
    onFocus={[Function]}
  >
    <option
      label="Something"
      value="something"
    />
    <option
      label="Something Else"
      value="something-else"
    />
  </select>
</div>
`;

exports[`SelectField should display errors if touched 1`] = `
<div
  className="control-group"
>
  <select
    className="with-errors"
    name="someInput"
    onChange={[Function]}
    onFocus={[Function]}
    value="something"
  >
    <option
      label="Something"
      value="something"
    />
    <option
      label="Something Else"
      value="something-else"
    />
  </select>
  <div
    className="errors"
  >
    <div
      className="error"
    >
      does not look right
    </div>
    <div
      className="error"
    >
      smells funny
    </div>
  </div>
</div>
`;

exports[`SelectField should render 1`] = `
<div
  className="control-group"
>
  <label
    htmlFor="someInput"
  >
    Some Input
  </label>
  <select
    className=""
    name="someInput"
    onChange={[Function]}
    onFocus={[Function]}
    value="something"
  >
    <option
      label="Something"
      value="something"
    />
    <option
      label="Something Else"
      value="something-else"
    />
  </select>
</div>
`;
